<resources>
    <string name="app_name">UserTest</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="initial_count">0</string>
    <string name="post_likes_text">Post Likes</string>
    <string name="followers_text">Followers</string>
    <string name="following_text">Following</string>
    <string name="default_name">John Doe</string>
    <string name="verified_text">Verified</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="settings">Settings</string>
    <string name="account_text">Account</string>
    <string name="about_text">About</string>
    <string name="change_password_header">Change your password</string>
    <string name="upgrade_premium_header">Upgrade to Premium</string>
    <string name="terms_header">Terms of Use</string>
    <string name="licenses_header">Licenses</string>
    <string name="logout_header">Log Out</string>
    <string name="at_symbol">\@</string>
</resources>
